tests/paczka1/fuzzy1/54072714.err
Error in line 4: tW0x8hYGKn S234 -31,0
Error in line 1: lwIJbZ5gE4 S699 74,7
Error in line 12: wFay6lG S474 9,8
Error in line 20: YkEgpTTPXu A700 25,8
Error in line 22: X5v80Fr S699 9,3
Error in line 21: YkEgpTTPXu S234 78,9
Error in line 28: lwIJbZ5gE4 S699 57,20
Error in line 31: A700 S234 67,2
Error in line 17: wFay6lG A700 55,6
Error in line 2: tW0x8hYGKn S234 75,4
